--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 services:
   app:
+    container_name: hillel-app
     build:
       context: ./docker/app
       dockerfile: Dockerfile
