--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -2,9 +2,6 @@ FROM debian:bullseye
 
 LABEL MAINTAINER="Anton Kulinich"
 LABEL DESCRIPTION="Image for learning in Hillel school"
-ARG DOCKER_APP_DIR
-ARG DOCKER_ENABLE_XDEBUG
-WORKDIR $DOCKER_APP_DIR
 
 # Install general dependencies
 RUN apt-get update -y -q && \
@@ -43,11 +40,14 @@ RUN wget -O composer-setup.php https://getcomposer.org/installer && \
     php composer-setup.php --install-dir=/usr/local/bin --filename=composer
 
 # Install xdebug
-ARG DOCKER_ENABLE_XDEBUG
-RUN if [ "$DOCKER_ENABLE_XDEBUG" = "1" ] ; then \
+ARG XDEBUG_MODE
+RUN if [ ! "$XDEBUG_MODE" = "off" ] ; then \
       apt-get update -y -q && \
       apt-get install -y -q php8.2-xdebug && \
       rm -rf /var/lib/apt/lists/*; \
     fi
+
+ARG DOCKER_APP_DIR
+WORKDIR $DOCKER_APP_DIR
 
 ENTRYPOINT ["./docker/app/entrypoint.sh"]
