--- a/.env.dist
+++ b/.env.dist
@@ -1,9 +1,10 @@
 DOCKER_WEB_PORT=8080
 DOCKER_APP_PORT=8081
-DOCKER_ENABLE_XDEBUG=1
 DOCKER_APP_DIR=/app
 XDEBUG_MODE=debug
+XDEBUG_START_WITH_REQUEST=yes
 XDEBUG_CLIENT_HOST=host.docker.internal
 XDEBUG_CLIENT_PORT=9003
-XDEBUG_SESSION=PHPSTORM
-PHP_IDE_CONFIG=serverName=HillelLocal
+XDEBUG_CLIENT_IDEKEY=PHPSTORM
+XDEBUG_MAX_NESTING_LEVEL=1000
+PHP_IDE_CONFIG=serverName=hillel.edu.local
