Finish Command handler

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,7 @@ XDEBUG_CLIENT_PORT=9003
 XDEBUG_CLIENT_IDEKEY=PHPSTORM
 XDEBUG_MAX_NESTING_LEVEL=1000
 PHP_IDE_CONFIG=serverName=hillel.edu.local
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
