--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,22 @@ services:
     networks:
       - app-network
 
+  db:
+    image: mysql
+    container_name: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    ports:
+      - '${DOCKER_DB_PORT:-13306}:3306'
+    volumes:
+      - ./docker/db/entrypoint.d:/docker-entrypoint-initdb.d
+      - ./docker/db/data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD:-password}'
+      MYSQL_DATABASE: '${MYSQL_DATABASE:-database}'
+      MYSQL_USER: '${MYSQL_USER:-user}'
+      MYSQL_PASSWORD: '${MYSQL_PASSWORD:-password}'
+
 networks:
   app-network:
     driver: bridge
