--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "ufo-cms/colored_cli": "dev-main",
     "psr/container": "^2.0",
     "psr/log": "^3.0",
-    "vlucas/phpdotenv": "^5.5@dev"
+    "vlucas/phpdotenv": "^5.5@dev",
+    "illuminate/database": "^11.0@dev"
   }
 }
