--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,39 +1,28 @@
-FROM debian:bullseye
-
-LABEL MAINTAINER="Anton Kulinich"
-LABEL DESCRIPTION="Image for learning in Hillel school"
+FROM php:8-fpm
 
 # Install general dependencies
 RUN apt-get update -y -q && \
-    apt-get install -y -q wget gnupg2 lsb-release && \
-    wget https://packages.sury.org/php/apt.gpg && apt-key add apt.gpg && \
-    echo "deb https://packages.sury.org/php/ $(lsb_release -sc) main" | tee /etc/apt/sources.list.d/php.list && \
-    apt-get update -y && \
     apt-get install -q -y \
-    php8.2-fpm \
-    php8.2-zip \
-    php8.2-gd \
-    php8.2-curl \
-    php8.2-mysql \
-    php8.2-imap \
-    php8.2-mbstring \
-    php8.2-xml \
-    php8.2-bcmath \
+    wget \
     git \
     nano \
     mc \
     supervisor \
     cron \
+    zip \
     unzip \
+    curl \
     libzip-dev \
     libpng-dev \
     libcurl4-openssl-dev \
     libc-client-dev \
     libkrb5-dev \
     libonig-dev \
-    libxml2-dev \
-    rsyslog && \
+    libxml2-dev && \
     rm -rf /var/lib/apt/lists/*
+
+# Install extensions
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
 # Install composer
 RUN wget -O composer-setup.php https://getcomposer.org/installer && \
@@ -42,12 +31,13 @@ RUN wget -O composer-setup.php https://getcomposer.org/installer && \
 # Install xdebug
 ARG XDEBUG_MODE
 RUN if [ ! "$XDEBUG_MODE" = "off" ] ; then \
-      apt-get update -y -q && \
-      apt-get install -y -q php8.2-xdebug && \
-      rm -rf /var/lib/apt/lists/*; \
+      pecl install xdebug && \
+      docker-php-ext-enable xdebug; \
     fi
 
 ARG DOCKER_APP_DIR
 WORKDIR $DOCKER_APP_DIR
+
+#EXPOSE 9000
 
 ENTRYPOINT ["./docker/app/entrypoint.sh"]
