--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
         XDEBUG_MODE: '${XDEBUG_MODE:-off}'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
-    ports:
-      - '${DOCKER_APP_PORT}:8081'
     volumes:
       - ./:${DOCKER_APP_DIR}
+    depends_on:
+      - db
     environment:
       DOCKER_APP_DIR: '${DOCKER_APP_DIR:-/app}'
       XDEBUG_MODE: '${XDEBUG_MODE:-off}'
@@ -26,22 +26,30 @@ services:
 
   # Nginx service
   nginx:
-    image: nginx:alpine
-    container_name: php-nginx
+    image: nginx:latest
+    container_name: hillel-nginx
     ports:
-      - '${DOCKER_WEB_PORT:-8080}:80'
+      - ${DOCKER_WEB_PORT:-80}:80
     volumes:
-      - ./:/app
-    networks:
-      - app-network
+      - ./:${DOCKER_APP_DIR:-/app}
+      - ./docker/nginx/conf.d:/etc/nginx/conf.d
+      - ./docker/nginx/templates:/etc/nginx/templates
+      - ./docker/nginx/logs:/var/log/nginx
+    links:
+      - app
+    depends_on:
+      - app
+    environment:
+      PHP_CONTAINER: app
+      DOCKER_APP_DIR: ${DOCKER_APP_DIR:-/app}
 
   db:
     image: mysql
-    container_name: mysql
+    container_name: hillel-db
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
-      - '${DOCKER_DB_PORT:-13306}:3306'
+      - ${DOCKER_DB_PORT:-13306}:3306
     volumes:
       - ./docker/db/entrypoint.d:/docker-entrypoint-initdb.d
       - ./docker/db/data:/var/lib/mysql
@@ -50,7 +58,3 @@ services:
       MYSQL_DATABASE: '${MYSQL_DATABASE:-database}'
       MYSQL_USER: '${MYSQL_USER:-user}'
       MYSQL_PASSWORD: '${MYSQL_PASSWORD:-password}'
-
-networks:
-  app-network:
-    driver: bridge
